--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ a.social:hover {
 
 /* Contact Page Style */
 .contact-card {
-  margin: 30px auto;
+  margin: 30px;
   padding: 20px 40px 40px;
   background-color: #fff;
   max-width: 500px;
